User quiz attempt and quiz result pages developed